bottom scrollbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,9 @@
 
 body {
     margin: 0;
+    padding: 0;
     display: grid;
     height: 100vh;
-    width: 100vw;
     grid-template-rows:
         minmax(min-content, 20%) minmax(min-content, 45%) minmax(
             min-content,
